# Stellarion

./: .gitignore  CMakeLists.txt
data/: universe.json
include/: Asteroid.h  BlackHole.h  CelestialObject.h  Comet.h  Exoplanet.h  Galaxy.h  GalaxyCluster.h  Meteor.h  Moon.h  Nebula.h  Planet.h  Star.h  StarSystem.h  desktop.ini
src/: Asteroid.cpp  BlackHole.cpp  CelestialObject.cpp  Comet.cpp  Exoplanet.cpp  Galaxy.cpp  GalaxyCluster.cpp  Meteor.cpp  Moon.cpp  Nebula.cpp  Planet.cpp  Star.cpp  StarSystem.cpp  main.cpp
